...
    @Environment(\.colorScheme) var colorScheme
    
    var body: some View {
        VStack {
            ZStack {
                Image(systemName: "power.circle").resizable().frame(width: 80.0, height: 80.0)
                    .accessibilityIdentifier("Knob")
                    .offset(x: 0, y: offset.height)
                    .gesture(
                        DragGesture()
                            .onChanged { gesture in
                                withAnimation {
                                    if (abs(gesture.translation.height + gesture.startLocation.y) < snapToZero) {
...
